// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendMessageDetails MsgSend 1 has the expected html structure 1`] = `
<div>
  <div
    class="tx__content__caption"
  >
    <p>
      
      Sent
      
      <b>
        0.2345
      </b>
       
      <span>
        ATOM
      </span>
    </p>
  </div>
   
  <div
    class="tx__content__information"
  >
    
      From 
      
    <bech32-stub
      address="cosmos1alkjdbasdlkhasldjnasldkjasndlkjansdlasndlkj"
    />
     to 
      
    <bech32-stub
      address="cosmos1alkjdbasdlkhasldjnasldkjasndlkjansdlasndlkj"
    />
     
    <span>
       - (Sent via Lunie)
    </span>
  </div>
</div>
`;

exports[`SendMessageDetails MsgSend 2 has the expected html structure 1`] = `
<div>
  <div
    class="tx__content__caption"
  >
    <p>
      
      Sent
      
      <b>
        0.2345
      </b>
       
      <span>
        ATOM
      </span>
    </p>
  </div>
   
  <div
    class="tx__content__information"
  >
    
      To 
      
    <bech32-stub
      address="cosmos1alkjdbasdlkhasldjnasldkjasndlkjansdlasndlkasdas"
    />
     
    <span>
       - (Sent via Lunie)
    </span>
  </div>
</div>
`;

exports[`SendMessageDetails MsgSend 3 has the expected html structure 1`] = `
<div>
  <div
    class="tx__content__caption"
  >
    <p>
      
      Sent
      
      <b>
        0.2345
      </b>
       
      <span>
        ATOM
      </span>
    </p>
  </div>
   
  <div
    class="tx__content__information"
  >
    To yourself! 
    <span>
       - (Sent via Lunie)
    </span>
  </div>
</div>
`;

exports[`SendMessageDetails MsgSend 4 has the expected html structure 1`] = `
<div>
  <div
    class="tx__content__caption"
  >
    <p>
      
      Received
      
      <b>
        0.2345
      </b>
       
      <span>
        ATOM
      </span>
    </p>
  </div>
   
  <div
    class="tx__content__information"
  >
    
      From 
      
    <bech32-stub
      address="cosmos11231212"
    />
     
    <span>
       - (Sent via Lunie)
    </span>
  </div>
</div>
`;
